fix alignment on friend activity

--- a/src/components/friendactivity/friendactivity.scss
+++ b/src/components/friendactivity/friendactivity.scss
@@ -19,7 +19,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 40px;
 
     &-top {
       font-size: 1.16em;
